# DevMatrix

./: .env.example  .gitignore  Containerfile  README.md  api_server.py  fullstack_execution_plan_simple.md  plan.md  pyproject.toml  pytest.ini  requirements.txt
demo/: run_demo.py
frontend/: index.html  index.vanilla.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ArtifactsView.jsx  Header.jsx  ProgressBar.jsx  PromptPanel.jsx  ResizeDivider.jsx  ResultsPanel.jsx  ShortcutsModal.jsx  Sidebar.jsx  SwarmVisualizer.jsx  TerminalPanel.jsx  Toast.jsx
frontend/src/services/: api.js
frontend/src/utils/: helpers.js
nexussentry/: __init__.py  contracts.py  main.py
nexussentry/adapters/: __init__.py  claw_bridge.py  nexus_backend.py  pocketpaw_backend.py
nexussentry/agents/: AGENT-A_scout.py  AGENT-B_architect.py  AGENT-C_builder.py  AGENT-D_qa_verifier.py  AGENT-E_critic.py  AGENT-F_integrator.py  __init__.py  architect.py  builder.py  critic.py  critic_panel.py  fixer.py  integrator.py  optimizer.py  qa_verifier.py  scout.py
nexussentry/agents/critics/: __init__.py  architecture_judge.py  base_judge.py  correctness_judge.py  security_judge.py
nexussentry/api/: __init__.py  __main__.py  app.py  models.py  service.py  store.py
nexussentry/communication/: __init__.py  blackboard.py
nexussentry/execution/: __init__.py  profile_selector.py  smart_dispatcher.py
nexussentry/factory/: __init__.py  agent_factory.py
nexussentry/hitl/: __init__.py  telegram.py  user_permission.py
nexussentry/learning/: __init__.py  feedback_store.py
nexussentry/memory/: __init__.py  episodic_memory.py  feedback_store.py  typed_memory.py  working_memory.py
nexussentry/observability/: __init__.py  cost_tracker.py  dashboard.py  tracer.py  ws_dashboard.py
nexussentry/protocol/: __init__.py
nexussentry/providers/: __init__.py  dynamic_router.py  llm_provider.py
nexussentry/routing/: __init__.py  dynamic_router.py
nexussentry/security/: __init__.py  behavioral_guard.py  constitutional_guard.py  guardian.py
nexussentry/utils/: __init__.py  response_cache.py  swarm_memory.py  watchdog.py
tests/: conftest.py  test_agents.py  test_api_backend.py  test_api_optimize.py  test_cache.py  test_claw_bridge.py  test_goal_contract.py  test_guardian.py  test_manifest.py  test_orchestrator.py  test_provider.py  test_provider_fallback.py  test_qa_deterministic.py  test_swarm_memory.py  test_user_permission.py
tests/integration/: test_v3_pipeline.py
tests/unit/: test_working_memory.py
(+4 files in other folders)
