[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexussentry"
version = "2.5.0"
description = "Multi-Agent Orchestration & Swarm Intelligence — Python for the Brain, Rust for the Blade"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "NexusSentry Team"},
]

dependencies = [
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
]

[project.optional-dependencies]
all = [

]
dev = [
    "pytest>=8.0",
    "ruff>=0.3.0",
]

[tool.setuptools.packages.find]
include = ["nexussentry*"]

[tool.ruff]
line-length = 100
target-version = "py311"
