[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexussentry"
version = "2.5.0"
description = "Multi-Agent Orchestration & Swarm Intelligence — Python for the Brain, Rust for the Blade"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "NexusSentry Team"},
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-huggingface>=0.1.0",
    "langgraph>=0.2.0",
]

[project.optional-dependencies]
all = [

]
dev = [
    "pytest>=8.0",
    "ruff>=0.3.0",
]

[tool.setuptools.packages.find]
include = ["nexussentry*"]

[tool.ruff]
line-length = 100
target-version = "py311"
